deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: falcon-api-service
spec:
  selector:
    app:  falcon-api
  type:  LoadBalancer
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  8000
