deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: falcon-api-ingress
spec:
  rules:
    - host: falcondemo.serverghost.io
      http:
        paths:
        - path: /
          backend:
            serviceName: falcon-api-service
            servicePort: 80
